Added FloatBox-type user controls in 4 variants which represents textboxes with float values. Updated MainWindow.

--- a/Dirt3TelemetryDisplay/MainWindow.xaml
+++ b/Dirt3TelemetryDisplay/MainWindow.xaml
@@ -4,9 +4,17 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dirt3TelemetryDisplay"
+        xmlns:uc="clr-namespace:Dirt3TelemetryDisplay.Controls"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
     </Grid>
+
 </Window>
