--- a/Dirt3TelemetryDisplay/Float4Box.xaml
+++ b/Dirt3TelemetryDisplay/Float4Box.xaml
@@ -5,8 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Dirt3TelemetryDisplay"
              mc:Ignorable="d" 
+             x:Name="parent"
              d:DesignHeight="25" d:DesignWidth="400" MinWidth="160" Height="25">
-    <Grid>
+    <Grid DataContext="{Binding ElementName=parent}">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
@@ -16,7 +17,8 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <Grid Grid.Row="0" Grid.Column="0">
+
+        <Grid Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
@@ -24,18 +26,21 @@
                 <ColumnDefinition Width="20" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
+            
             <Label 
-                Margin="0, -5, 0, 0"
+                Padding="0, 0, 0, 5"
+                VerticalAlignment="Center"
                 Grid.Row="0" 
                 Grid.Column="0"
                 HorizontalAlignment="Center"
                 VerticalContentAlignment="Center">x</Label>
+            
             <TextBox
-                Margin="0, 0, 0, 5"
+                VerticalAlignment="Center"
                 Grid.Row="0"
                 Grid.Column="2"
                 Text="{
-                    Binding XComponent, 
+                    Binding ValueX, 
                     Mode=TwoWay, 
                     UpdateSourceTrigger=LostFocus,
                     StringFormat={}{0:G}}"
@@ -46,9 +51,10 @@
                 AcceptsReturn="False"
                 SpellCheck.IsEnabled="False"
                 IsReadOnly="{Binding IsReadOnly}"/>
+            
         </Grid>
 
-        <Grid Grid.Row="0" Grid.Column="1">
+        <Grid Grid.Row="0" Grid.Column="1" VerticalAlignment="Center">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
@@ -56,18 +62,21 @@
                 <ColumnDefinition Width="20" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
+            
             <Label 
-                Margin="0, -5, 0, 0"
+                Padding="0, 0, 0, 5"
+                VerticalAlignment="Center"
                 Grid.Row="0" 
                 Grid.Column="0"
                 HorizontalAlignment="Center"
                 VerticalContentAlignment="Center">y</Label>
+            
             <TextBox
-                Margin="0, 0, 0, 5"
+                VerticalAlignment="Center"
                 Grid.Row="0"
                 Grid.Column="2"
                 Text="{
-                    Binding YComponent, 
+                    Binding ValueY, 
                     Mode=TwoWay, 
                     UpdateSourceTrigger=LostFocus,
                     StringFormat={}{0:G}}"
@@ -78,9 +87,10 @@
                 AcceptsReturn="False"
                 SpellCheck.IsEnabled="False"
                 IsReadOnly="{Binding IsReadOnly}"/>
+            
         </Grid>
 
-        <Grid Grid.Row="0" Grid.Column="2">
+        <Grid Grid.Row="0" Grid.Column="2" VerticalAlignment="Center">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
@@ -88,18 +98,21 @@
                 <ColumnDefinition Width="20" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
+            
             <Label 
-                Margin="0, -5, 0, 0"
+                Padding="0, 0, 0, 5"
+                VerticalAlignment="Center"
                 Grid.Row="0" 
                 Grid.Column="0"
                 HorizontalAlignment="Center"
                 VerticalContentAlignment="Center">z</Label>
+            
             <TextBox
-                Margin="0, 0, 0, 5"
+                VerticalAlignment="Center"
                 Grid.Row="0"
                 Grid.Column="2"
                 Text="{
-                    Binding ZComponent, 
+                    Binding ValueZ, 
                     Mode=TwoWay, 
                     UpdateSourceTrigger=LostFocus,
                     StringFormat={}{0:G}}"
@@ -110,9 +123,10 @@
                 AcceptsReturn="False"
                 SpellCheck.IsEnabled="False"
                 IsReadOnly="{Binding IsReadOnly}"/>
+            
         </Grid>
 
-        <Grid Grid.Row="0" Grid.Column="3">
+        <Grid Grid.Row="0" Grid.Column="3" VerticalAlignment="Center">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
@@ -120,18 +134,21 @@
                 <ColumnDefinition Width="20" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
+            
             <Label 
-                Margin="0, -5, 0, 0"
+                Padding="0, 0, 0, 5"
+                VerticalAlignment="Center"
                 Grid.Row="0" 
                 Grid.Column="0"
                 HorizontalAlignment="Center"
                 VerticalContentAlignment="Center">w</Label>
+            
             <TextBox
-                Margin="0, 0, 0, 5"
+                VerticalAlignment="Center"
                 Grid.Row="0"
                 Grid.Column="2"
                 Text="{
-                    Binding WComponent, 
+                    Binding ValueW, 
                     Mode=TwoWay, 
                     UpdateSourceTrigger=LostFocus,
                     StringFormat={}{0:G}}"
@@ -142,6 +159,7 @@
                 AcceptsReturn="False"
                 SpellCheck.IsEnabled="False"
                 IsReadOnly="{Binding IsReadOnly}"/>
+            
         </Grid>
 
     </Grid>
