--- a/Dirt3TelemetryDisplay/FloatBox.xaml
+++ b/Dirt3TelemetryDisplay/FloatBox.xaml
@@ -5,9 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Dirt3TelemetryDisplay"
              mc:Ignorable="d" 
+             x:Name="parent"
              d:DesignHeight="25" d:DesignWidth="100" MinWidth="20" Height="25">
-    <TextBox
-        Margin="0, 0, 0, 5"
+    <TextBox 
+        DataContext="{Binding ElementName=parent}"
+        VerticalAlignment="Center"
         Grid.Row="0"
         Grid.Column="2"
         Text="{
@@ -23,4 +25,5 @@
         AcceptsReturn="False"
         SpellCheck.IsEnabled="False"
         IsReadOnly="{Binding IsReadOnly}"/>
+    
 </UserControl>
