--- a/Dirt3TelemetryDisplay/IntBox.xaml
+++ b/Dirt3TelemetryDisplay/IntBox.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="Dirt3TelemetryDisplay.Controls.FloatBox"
+﻿<UserControl x:Class="Dirt3TelemetryDisplay.Controls.IntBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Dirt3TelemetryDisplay"
-             mc:Ignorable="d" 
              x:Name="parent"
+             mc:Ignorable="d" 
              d:DesignHeight="25" d:DesignWidth="100" MinWidth="20" Height="25">
     <TextBox 
         DataContext="{Binding ElementName=parent}"
@@ -15,13 +15,13 @@
             TargetNullValue='0',
             Mode=TwoWay, 
             UpdateSourceTrigger=LostFocus,
-            StringFormat={}{0:G}}"
+            StringFormat={}{0:D}}"
         VerticalContentAlignment="Center"
         Name="txtValue" 
         ScrollViewer.VerticalScrollBarVisibility="Disabled" 
         TextWrapping="Wrap"
         AcceptsReturn="False"
         SpellCheck.IsEnabled="False"
-        IsReadOnly="{Binding IsReadOnly}"/>
-    
+        IsReadOnly="{ Binding IsReadOnly }" />
+
 </UserControl>
