--- a/Dirt3TelemetryDisplay/Controls/FloatBox.xaml
+++ b/Dirt3TelemetryDisplay/Controls/FloatBox.xaml
@@ -22,6 +22,7 @@
         TextWrapping="Wrap"
         AcceptsReturn="False"
         SpellCheck.IsEnabled="False"
-        IsReadOnly="{Binding IsReadOnly}"/>
+        IsReadOnly="{Binding IsReadOnly}"
+        MaxLength="{Binding MaxTextLength}"/>
     
 </UserControl>
